# rush-hour

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  build.sh
doc/perf/: analysis.ods
src/: Car.h  Direction.h  Explorer.cpp  Explorer.h  Generator.cpp  Generator.h  History.cpp  History.h  Situation.cpp  Situation.h  Vector2.h  main.cpp  utils.cpp  utils.h
test/: main.cpp  test_explorer.cpp  test_situation.cpp
test/support/: level1200.txt  solved.txt
